1.2gb-content/kubernetes-master-copy/test/e2e/testing-manifests/ingress/pre-shared-cert/rc.yaml
apiVersion: v1
kind: ReplicationController
metadata:
  name: echoheaders-https
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: echoheaders-https
    spec:
      containers:
      - name: echoheaders-https
        image: registry.k8s.io/e2e-test-images/agnhost:2.54
        command:
        - /agnhost
        - netexec
        - --http-port=8080
        - --tls-cert-file=/localhost.crt
        - --tls-private-key-file=/localhost.key
        ports:
        - containerPort: 8080
# ID-1768294452-ab580330
