1.2gb-content/kubernetes-master-copy/test/e2e/testing-manifests/ingress/pre-shared-cert/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoheaders-https
  labels:
    app: echoheaders-https
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoheaders-https
# ID-1768294452-4a11637c
